--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "nexus"
-version = "0.1.0"
+version = "0.1.1"
 description = ""
 authors = ["Johan Ronnkvist <johan.ronnkvist@gmail.com>"]
 readme = "README.md"
@@ -11,6 +11,10 @@ pyside6 = "^6.5.2"
 
 [tool.poetry.group.dev.dependencies]
 pyinstaller = "^5.13.2"
+
+[tool.poetry.scripts]
+build_exe = "scripts.build:build_executable"
+build_installer = "scripts.build:build_installer"
 
 [build-system]
 requires = ["poetry-core"]
