--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,11 +1,33 @@
 repos:
 -   repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v2.3.0
+    rev: v4.4.0
     hooks:
+    -   id: check-added-large-files
+    -   id: check-toml
     -   id: check-yaml
+        args:
+        -   --unsafe
     -   id: end-of-file-fixer
     -   id: trailing-whitespace
+
+-   repo: https://github.com/charliermarsh/ruff-pre-commit
+    rev: v0.0.275
+    hooks:
+    -   id: ruff
+        args:
+        - --fix
+
 -   repo: https://github.com/psf/black
-    rev: 22.10.0
+    rev: 23.3.0
     hooks:
     -   id: black
+
+-   repo: local
+    hooks:
+    -   id: pytest
+        name: pytest
+        stages: [push]
+        entry: pytest
+        language: python
+        types: [python]
+        additional_dependencies: [pytest]
