--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,6 +29,11 @@ select = [
     "C",  # flake8-comprehensions
     "B",  # flake8-bugbear
 ]
+ignore = [
+    "E501",  # line too long, handled by black
+    "B008",  # do not perform function calls in argument defaults
+    "C901",  # too complex
+]
 
 [tool.black]
 line-length = 120
